:hammer: 重构代码和逻辑，使用sqlite存储数据，焕然一新

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,415 +1,1 @@
-<!DOCTYPE html>
-<html dir="ltr" lang="zh-CN" >
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="referrer" content="no-referrer" />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="favicon.ico" />
-    <title>百词斩小班数据管理</title>
-    <style>
-      html {
-        height: 100%;
-      }
-      body {
-        display: flex;
-        height: 100%;
-        margin: 0;
-        align-items: stretch;
-        justify-content: center;
-        background-image: linear-gradient(to bottom right, #bef5ff, #c8beff);
-      }
-      main {
-        position: relative;
-        display: flex;
-        font-weight: bold;
-        flex-direction: column;
-        margin: 1rem;
-        width: 100%;
-        background-color: rgba(255,255,255,0.6);
-        box-shadow: 0 0 0.5rem 0.2rem #fff;
-        border: 1px solid white;
-        border-radius: 2rem;
-        align-items: center;
-        justify-content: center;
-        justify-content: space-between;
-      }
-      h1 {
-        color: #66ccff;
-        font-size: 200%;
-      }
-      .hide {
-        display: none !important;
-      }
-      .loader{
-        display: inline-block;
-        vertical-align: middle;
-      }
-      .bg-white {
-        background: white;
-      }
-      .container {
-        display: flex;
-        border: 2px solid;
-        border-radius: 0.5rem;
-        margin: 0.5rem;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        max-width: 80%;
-      }
-      @media (min-width: 450px) {
-        .container {
-          max-width: 400px;
-        }
-      }
-      .container>* {
-        flex-basis: 100%;
-      }
-      .capsule {
-        display: flex;
-        align-items: stretch;
-        width: fit-content;
-        border: 2px solid;
-        border-radius: 0.5rem;
-        margin: 0.2rem;
-        flex-wrap: nowrap;
-      }
-      .capsule>* {
-        flex-basis: 100%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0 0.2rem;
-        text-align: center;
-        white-space: nowrap;
-      }
-      .capsule span:first-child {
-        flex-basis: auto;
-      }
-      .capsule>span {
-        border-right: 2px solid;
-      }
-      .capsule>span:last-child {
-        border-right: none;
-      }
-      .capsule>div {
-        margin: 0.2rem;
-      }
-      .btn-group {
-        display: flex;
-        margin: 0.2rem;
-        justify-content: space-around;
-        flex-direction: row;
-        flex-wrap: wrap;
-      }
-      .btn {
-        color: fieldtext;
-        text-decoration: none;
-        cursor: pointer;
-        padding: 0.2rem;
-        box-shadow: 0 0 0.2rem 0.1rem #888;
-        user-select: none;
-        transition: all 0.2s ease;
-      }
-      .btn:focus, input:focus {
-        box-shadow: none !important;
-      }
-      .btn:active {
-        transform: scale(0.9);
-      }
-      .btn.disabled {
-        opacity: 0.6;
-        transform: none !important;
-        cursor: not-allowed;
-      }
-
-      /* 提示弹窗 */
-      #notify_container {
-        position: absolute;
-        display: flex;
-        top: 1rem;
-        left: 50%;
-        transform: translate(-50%, 0);
-        flex-direction: column;
-        align-items: center;
-      }
-      .notification {
-        position: relative;
-        background-color: rgba(255,255,255,0.9);
-        box-shadow: 0 0 0.5rem 0.2rem #fff;
-        border: 2px solid #999;
-        border-radius: 0.5rem;
-        padding: 0.5rem;
-        margin-top: 0.5rem;
-        font-weight: bold;
-        opacity: 0;
-        transition: all 0.5s ease-in-out;
-      }
-      .fade-in {
-        animation: fade-in 0.5s forwards;
-      }
-      @keyframes fade-in {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-      .fade-out {
-        animation: fade-out 0.5s forwards;
-      }
-      @keyframes fade-out {
-        from {
-          opacity: 1;
-          transform: translateY(0);
-        }
-        to {
-          opacity: 0;
-          transform: translateY(-20px);
-        }
-      }
-
-      /*Footer*/
-      footer{
-        position: relative;
-        display: flex;
-        margin: 1rem;
-        justify-content: center;
-        font-weight: bold;
-      }
-      .info {
-        display: flex;
-        align-items: center;
-        position: relative;
-        overflow: hidden;
-        border-radius: 100px;
-        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
-      }
-      .info a{
-        color:#66ccff;
-        text-decoration: underline;
-      }
-      .info>input {
-        position: absolute;
-        width: 56px;
-        height: 56px;
-        opacity: 0;
-        cursor: pointer;
-      }
-      .info>div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        width: 36px;
-        max-width: 90vw;
-        height: 36px;
-        margin: 10px;
-        opacity: 0;
-        visibility: collapse;
-        transition: all 0.6s ease-in-out;
-      }
-      .info>input:checked~div {
-        width: 400px;
-        opacity: 1;
-        visibility: visible;
-      }
-      @media (max-width: 340px){
-        .info>input:checked~div {
-          margin-left: 50px !important;
-        }
-      }
-      .info>span:nth-child(2) {
-        position: absolute;
-        left: 21px;
-        width: 14px;
-        height: 14px;
-        border-radius: 50%;
-        background: #66ccff;
-        pointer-events: none;
-        box-shadow: inset 2px 2px 3px #52a3cc,inset -2px -2px 3px #7af5ff;
-        transform: translateY(-.8em);
-        transition: all 0.8s cubic-bezier(1, 0, .5, 1.5);
-      }
-      .info>input:checked~span:nth-child(2) {
-        width: 0;
-        height: 0;
-        transform: translateX(2px);
-      }
-      .info>span:nth-child(3) {
-        position: absolute;
-        left: 22px;
-        width: 12px;
-        height: 22px;
-        background: #66ccff;
-        pointer-events: none;
-        box-shadow: inset 2px 2px 3px #52a3cc,inset -2px -2px 3px #7af5ff;
-        transform: translateY(10px);
-        transition: all 0.8s cubic-bezier(1, 0, .5, 1.5);
-      }
-      .info>input:checked~span:nth-child(3) {
-        width: 8px;
-        height: 40px;
-        border-radius: 50%;
-        background: #ff88aa;
-        transform: translateY(0) rotate(-45deg);
-        box-shadow: inset 2px 2px 3px #c06680, inset -.1em -.1em .2em #ff9ac0;
-      }
-      .info>span:nth-child(4) {
-        position: absolute;
-        left: 22px;
-        width: 12px;
-        height: 22px;
-        background: #66ccff;
-        pointer-events: none;
-        box-shadow: inset 2px 2px 3px #52a3cc,inset -2px -2px 3px #7af5ff;
-        transform: translateY(10px);
-        transition: all 0.8s cubic-bezier(1, 0, .5, 1.5);
-      }
-      .info>input:checked~span:nth-child(4) {
-        width: 8px;
-        height: 40px;
-        border-radius: 50%;
-        background: #ff88aa;
-        box-shadow: inset 2px 2px 3px #c06680, inset -.1em -.1em .2em #ff9ac0;
-        transform: translateY(0) rotate(45deg);
-      }
-    </style>
-  </head>
-
-  <body>
-    <main>
-      <h1>百词斩小班数据管理</h1>
-      <div id="info_div" class="container bg-white hide">
-        <div class="capsule">
-          <span>当前班长</span>
-          <span id="user_name"></span>
-        </div>
-        <div class="capsule">
-          <span>班长ID</span>
-          <span id="user_id"></span>
-        </div>
-        <div class="btn-group">
-          <a class="btn capsule" onclick="downloadData(this, 'yesterday')">下载昨日数据</a>
-          <a class="btn capsule" onclick="downloadData(this, 'week')">下载本周数据</a>
-          <a class="btn capsule" onclick="downloadData(this, 'latest')">下载最新数据</a>
-        </div>
-      </div>
-      <span id="load_text">
-        <span class="loader">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            width="24px" height="30px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-            <rect x="0" y="0" width="4" height="10" fill="#333">
-              <animateTransform attributeType="xml"
-                attributeName="transform" type="translate"
-                values="0 0; 0 20; 0 0"
-                begin="0" dur="0.6s" repeatCount="indefinite" />
-            </rect>
-            <rect x="10" y="0" width="4" height="10" fill="#333">
-              <animateTransform attributeType="xml"
-                attributeName="transform" type="translate"
-                values="0 0; 0 20; 0 0"
-                begin="0.2s" dur="0.6s" repeatCount="indefinite" />
-            </rect>
-            <rect x="20" y="0" width="4" height="10" fill="#333">
-              <animateTransform attributeType="xml"
-                attributeName="transform" type="translate"
-                values="0 0; 0 20; 0 0"
-                begin="0.4s" dur="0.6s" repeatCount="indefinite" />
-            </rect>
-          </svg>
-        </span>
-        数据获取中，请稍后...
-      </span>
-      <footer>
-        <div class="info">
-          <input type="checkbox">
-          <span></span>
-          <span></span>
-          <span></span>
-          <div>
-            <span><a href="https://github.com/shadlc/BCZ-Group-Manager" target="_blank"><u>BCZ-Group-Manager</u></a> Made By Shadlc</span>
-          </div>
-        </div>
-      </footer>
-    </main>
-    <div id="notify_container"></div>
-  </body>
-  <script>
-    window.onload = ()=>{
-      fetch('get_user_info')
-      .then(response => response.json())
-      .then(data => {
-        if(data.retcode) {
-          let load_text = document.querySelector('#load_text');
-          load_text.innerHTML = data.msg;
-        }
-        let user_name = document.querySelector('#user_name');
-        user_name.innerHTML = data.data.name;
-        let user_id = document.querySelector('#user_id');
-        user_id.innerHTML = data.data.uniqueId;
-        let load_text = document.querySelector('#load_text');
-        load_text.classList.add('hide');
-        let info_div = document.querySelector('#info_div');
-        info_div.classList.remove('hide');
-      })
-      .catch(error => {
-        console.error('请求错误:', error);
-        let load_text = document.querySelector('#load_text');
-        load_text.innerHTML = '请求错误:' + error;
-      });
-    }
-    function downloadData(element, period) {
-      if(element.classList.contains('disabled')) {
-        notify('点太快了，休息一下吧~');
-        return;
-      }
-      element.classList.add('disabled');
-      notify('正在下载中...请稍后...');
-      fetch('download?period=' + period)
-      .then(response => {
-        const contentType = response.headers.get("Content-Type");
-        if (contentType.includes("application/json")) {
-          return response.json().then(data => {
-            notify(data?.msg);
-          });
-        } else {
-          return response.blob().then(data => {
-            const link = document.createElement('a');
-            const dispositionHeader = response.headers.get('Content-Disposition');
-            const filename = decodeURIComponent(dispositionHeader.split("UTF-8''").pop());
-            link.href = URL.createObjectURL(data);
-            link.download = filename;
-            link.click();
-          });
-        }
-      })
-      .catch(error => {
-        notify('下载出错！返回为：' + error);
-        console.error(error);
-      })
-      .finally(() => {
-        element.classList.remove('disabled');
-      });
-    }
-    function notify(content) {
-      const container = document.getElementById('notify_container');
-      const notification = document.createElement('div');
-      notification.classList.add('notification', 'fade-in');
-      notification.textContent = content;
-      container.appendChild(notification);
-      setTimeout(() => {
-        notification.classList.remove('fade-in');
-        notification.classList.add('fade-out');
-        setTimeout(() => {
-          container.removeChild(notification);
-        }, 500);
-      }, 3000);
-    }
-  </script>
-</html>
+<meta http-equiv="refresh" content="0;url=group">
